--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: to4iki.github.io
 description: 
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 
 gems:
   - jekyll-mentions
